--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "start": "cd demo-app && npm start",
     "test": "ng test",
     "prebuild": "rimraf -- dist inline-template src/node_modules",
-    "install": "gulp inline-template && ngc -p src/tsconfig.lib.json",
+    "install": "npm i && gulp inline-template && ngc -p src/tsconfig.lib.json",
     "postbuild": "rimraf -- src/inline-template src/node_modules",
     "heroku-postbuild": "cd demo-app && yarn install && yarn run build:prod"
   },
